--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pydantic>=2.5.0
 # LangChain & LangGraph
 langchain>=0.1.0
 langchain-google-genai>=1.0.0
+google-generativeai>=0.4.0
 langgraph>=0.0.20
 
 # Web Scraping & Parsing
