--- a/.env.sample
+++ b/.env.sample
@@ -1,25 +1,27 @@
 # YAML configuration for the Tokyo Parking Crawler
 APP_CONFIG: |
-    log_level: INFO
-    log_file: logs/parking_crawler.log
     cache_dir: webpages
     cache_ttl_days: 7
-    output_file: parking_results.md
-    searxng_instance_url: http://127.0.0.1:8888
+    gemini_api_endpoint: null
+    gemini_api_key: YOUR_API_KEY
+    gemini_model: gemini/gemini-2.0-flash
+    log_file: logs/parking_crawler.log
+    log_level: INFO
+    max_crawl_pages: 10
+    max_distance_km: 5.0
+    max_price: 100000
     max_search_results: 10
+    output_file: parking_results.md
+    output_top_n: 5
+    scoring_weights:
+        amenity: 0.1
+        dimension: 0.4
+        distance: 0.2
+        price: 0.3
+    search_query_template: "site:*.jp \u6708\u6975\u99D0\u8ECA\u5834 {location} \u5C4B\
+        \u5916 \u5E73\u7F6E\u304D"
+    searxng_instance_url: http://127.0.0.1:8888
     vehicle_spec:
+        height_m: 2.1
         length_m: 4.8
         width_m: 1.9
-        height_m: 2.1
-    scoring_weights:
-        dimension: 0.4
-        price: 0.3
-        distance: 0.2
-        amenity: 0.1
-    max_price: 100000
-    max_distance_km: 5.0
-    output_top_n: 5
-    search_query_template: 'site:*.jp 月極駐車場 {location} 屋外 平置き'
-    gemini_model: gemini/gemini-2.0-flash
-    gemini_api_key: YOUR_API_KEY
-    gemini_api_endpoint: null
